@@ -1,10 +1,15 @@
 package se.mockachino;
 
 import org.junit.Test;
+import se.mockachino.exceptions.UsageError;
+import se.mockachino.matchers.Matchers;
 
+import java.io.IOException;
+import java.net.Socket;
+import java.net.SocketAddress;
 import java.util.List;
 
-import static junit.framework.Assert.assertEquals;
+import static junit.framework.Assert.*;
 
 public class ThrowsTest {
 	@Test
@@ -28,4 +33,67 @@ public class ThrowsTest {
 		}
 
 	}
+
+    @Test
+    public void testNewExceptions() {
+        List mock = Mockachino.mock(List.class);
+        IOException cause = new IOException();
+        RuntimeException exception = new RuntimeException("Hello world", cause);
+        Exception exception2 = null;
+        Mockachino.when(mock.size()).thenThrow(exception);
+        try {
+            mock.size();
+            fail();
+        } catch (Exception e) {
+            assertEquals(cause, e.getCause());
+            assertEquals("Hello world", e.getMessage());
+            assertFalse(exception == e);
+            exception2 = e;
+        }
+        try {
+            mock.size();
+            fail();
+        } catch (Exception e) {
+            assertFalse(e == exception2);
+        }
+    }
+
+    @Test(expected = UsageError.class)
+    public void validThrow() {
+        List mock = Mockachino.mock(List.class);
+        Mockachino.when(mock.size()).thenThrow(new IOException());
+    }
+
+    @Test
+    public void testCheckedException() throws IOException {
+        Socket mock = Mockachino.mock(Socket.class);
+        Mockachino.stubThrow(new IOException()).on(mock).connect(Matchers.any(SocketAddress.class));
+    }
+    
+    @Test(expected = UsageError.class)
+    public void testCheckedExceptionFail() throws IOException {
+        Socket mock = Mockachino.mock(Socket.class);
+        Mockachino.stubThrow(new ClassNotFoundException()).on(mock).connect(Matchers.any(SocketAddress.class));
+    }
+
+    @Test
+    public void testExceptionClasses() {
+        helper(new RuntimeException("Hello world", new IOException()));
+        helper(new IllegalArgumentException("Hello world", new IOException()));
+        helper(new Error("Hello world", new IOException()));
+        helper(new StackOverflowError("Hello world"));
+        helper(new UsageError("Hello world"));
+    }
+
+    private void helper(Throwable input) {
+        List mock = Mockachino.mock(List.class);
+        Mockachino.when(mock.size()).thenThrow(input);
+        try {
+            mock.size();
+            fail();
+        } catch (Throwable e) {
+            assertEquals(input.getCause(), e.getCause());
+            assertEquals(input.getMessage(), e.getMessage());
+        }
+    }
 }
